--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -145,11 +145,13 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
               <a class="dropdown-item">
+              
                 <i class="mdi mdi-settings text-primary"></i>
-                Settings
+                Profile
               </a>
               <a class="dropdown-item">
                 <i class="mdi mdi-logout text-primary"></i>
+                <form action="{{ url_for('login') }}" method="post">
                 Logout
               </a>
             </div>
@@ -166,6 +168,7 @@
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
           <li class="nav-item">
+          <form action="{{ url_for('dashboard') }}" method="post">
             <a class="nav-link" href="/dashboard">
               <i class="mdi mdi-home menu-icon"></i>
               <span class="menu-title">Dashboard</span>
@@ -185,6 +188,7 @@
             </div>
           </li> -->
           <li class="nav-item">
+          <form action="{{ url_for('searchengine') }}" method="post">
             <a class="nav-link" href="/searchengine">
               <i class="mdi mdi-view-headline menu-icon"></i>
               <span class="menu-title">Search Engine</span>
@@ -193,19 +197,7 @@
           <li class="nav-item">
             <a class="nav-link" href="/wordcloud">
               <i class="mdi mdi-chart-pie menu-icon"></i>
-              <span class="menu-title">Wordcloud</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="summarization">
-              <i class="mdi mdi-grid-large menu-icon"></i>
-              <span class="menu-title">Summarization</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="qna">
-              <i class="mdi mdi-emoticon menu-icon"></i>
-              <span class="menu-title">QnA</span>
+              <span class="menu-title">Analyse Document</span>
             </a>
           </li>
           <!-- <li class="nav-item">
@@ -225,6 +217,7 @@
             </div>
           </li> -->
           <li class="nav-item">
+          <form action="{{ url_for('login') }}" method="post">
             <a class="nav-link" href="/">
               <i class="mdi mdi-file-document-box-outline menu-icon"></i>
               <span class="menu-title">Logout</span>
