--- a/templates/searchengine.html
+++ b/templates/searchengine.html
@@ -193,21 +193,10 @@
           <li class="nav-item">
             <a class="nav-link" href="/wordcloud">
               <i class="mdi mdi-chart-pie menu-icon"></i>
-              <span class="menu-title">Wordcloud</span>
+              <span class="menu-title">Analyse Document</span>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="summarization">
-              <i class="mdi mdi-grid-large menu-icon"></i>
-              <span class="menu-title">Summarization</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="qna">
-              <i class="mdi mdi-emoticon menu-icon"></i>
-              <span class="menu-title">QnA</span>
-            </a>
-          </li>
+          
           <!-- <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
               <i class="mdi mdi-account menu-icon"></i>
