--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -153,6 +153,7 @@
                 <i class="mdi mdi-logout text-primary"></i>
                 <form action="{{ url_for('login') }}" method="post">
                 Logout
+                </form>
               </a>
             </div>
           </li>
@@ -195,9 +196,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/wordcloud">
+            <a class="nav-link" href="/upload">
               <i class="mdi mdi-chart-pie menu-icon"></i>
-              <span class="menu-title">Analyse Document</span>
+              <span class="menu-title">Upload</span>
             </a>
           </li>
           <!-- <li class="nav-item">
