--- a/templates/upload.html
+++ b/templates/upload.html
@@ -114,10 +114,13 @@
                         <input type="file" name="img[]" class="file-upload-default">
                         <div style="margin-right: 10px;"></div>
                         <div class="input-group col-xs-12">
-                          <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Image">
+                          <input type="text" class="form-control file-upload-info" disabled placeholder="Browse PDF">
                           <span class="input-group-append">
-                            <button class="file-upload-browse btn btn-primary" type="button">Upload</button>
+                            <button class="file-upload-browse btn btn-primary" type="button">Browse</button>
                           </span>
+                          <button type="button" class="btn btn-success btn-icon-text" style="margin-left:10px;">                                                 
+                            Upload
+                          </button>
                         </div>
                     </div>
 
