--- a/templates/searchengine.html
+++ b/templates/searchengine.html
@@ -114,39 +114,20 @@
                     <!-- Use the <code>.form-inline</code> class to display a series of labels, form controls, and buttons on a single horizontal row -->
                   </p>
                   <form class="form-inline">
-
-                      <!-- <div class="input-group"> -->
-                        <!-- <div class="input-group-prepend"> -->
                           <button class="form-control mb-2 mr-sm-2 btn btn-lg btn-outline-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" style="margin-right: 10px;">Select Engine</button>
                           <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">ARXIV</a>
                             <div role="separator" class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div role="separator" class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                            <div role="separator" class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
+                            <a class="dropdown-item" href="#">IEEE</a>
                           </div>
-                        <!-- </div> -->
-                        <!-- <input type="text" class="form-control" aria-label="Text input with dropdown button"> -->
-                      <!-- </div> -->
                       
                     <label class="sr-only" for="inlineFormInputName2">Topic</label>
                     <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Topic">
 
                     <label class="sr-only" for="inlineFormInputGroupUsername2">Results</label>
                     <div class="input-group mb-2 mr-sm-2">
-                      <!-- <div class="input-group-prepend">
-                        <div class="input-group-text">@</div>
-                      </div> -->
                       <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="No of Results">
                     </div>
-                    <!-- <div class="form-check mx-sm-2">
-                      <label class="form-check-label">
-                        <input type="checkbox" class="form-check-input" checked>
-                        Remember me
-                      </label>
-                    </div> -->
                     <button type="submit" class="btn btn-primary mb-2">Submit</button>
                   </form>
                 </div>
