--- a/templates/analyse.html
+++ b/templates/analyse.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="../static/css/style.css">
   <!-- endinject -->
   <link rel="shortcut icon" href="../static/images/favicon.png" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfobject/2.1.1/pdfobject.min.js"></script>
 </head>
 
 <body>
@@ -23,13 +24,14 @@
     <!-- partial:../static/partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="navbar-brand-wrapper d-flex justify-content-center">
-        <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">  
-          <a class="navbar-brand brand-logo" href="index.html"><img src="../static/images/logo.svg" alt="logo"/></a>
-          <a class="navbar-brand brand-logo-mini" href="index.html"><img src="../static/images/logo-mini.svg" alt="logo"/></a>
+        <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">
+          <a class="navbar-brand brand-logo" href="index.html"><img src="../static/images/logo.svg" alt="logo" /></a>
+          <a class="navbar-brand brand-logo-mini" href="index.html"><img src="../static/images/logo-mini.svg"
+              alt="logo" /></a>
           <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
             <span class="mdi mdi-sort-variant"></span>
           </button>
-        </div>  
+        </div>
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
         <ul class="navbar-nav mr-lg-4 w-100">
@@ -40,15 +42,16 @@
                   <i class="mdi mdi-magnify"></i>
                 </span>
               </div>
-              <input type="text" class="form-control" placeholder="Search now" aria-label="search" aria-describedby="search">
+              <input type="text" class="form-control" placeholder="Search now" aria-label="search"
+                aria-describedby="search">
             </div>
           </li>
         </ul>
         <ul class="navbar-nav navbar-nav-right">
-          
+
           <li class="nav-item nav-profile dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
-              <img src="../static/images/faces/face5.jpg" alt="profile"/>
+              <img src="../static/images/faces/face5.jpg" alt="profile" />
               <span class="nav-profile-name">Thapar</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
@@ -63,7 +66,8 @@
             </div>
           </li>
         </ul>
-        <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
+        <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button"
+          data-toggle="offcanvas">
           <span class="mdi mdi-menu"></span>
         </button>
       </div>
@@ -103,7 +107,7 @@
               <span class="menu-title">QnA</span>
             </a>
           </li>
-          
+
           <li class="nav-item">
             <a class="nav-link" href="/">
               <i class="mdi mdi-file-document-box-outline menu-icon"></i>
@@ -113,100 +117,55 @@
         </ul>
       </nav>
       <!-- partial -->
-      <div class="main-panel">        
+      <div class="main-panel">
         <div class="content-wrapper">
           <div class="row">
+
             
-            <div class="col-12 grid-margin stretch-card">
+            <div class="col-lg-8 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Selection</h4>
-                  <p class="card-description">
-                    <!-- Use the <code>.form-inline</code> class to display a series of labels, form controls, and buttons on a single horizontal row -->
-                  </p>
-                  <form class="form-inline">
-                    <div class="template-demo">
-                    <button type="button" class="btn btn-primary btn-icon-text">
-                      <i class="mdi mdi-file-check btn-icon-prepend"></i>
-                      WordCloud
-                    </button>
-                    <button type="button" class="btn btn-dark btn-icon-text">
-                      Summarization
-                      <i class="mdi mdi-file-check btn-icon-append"></i>                          
-                    </button>
-                    <button type="button" class="btn btn-success btn-icon-text">
-                      <i class="mdi mdi-alert btn-icon-prepend"></i>                                                    
-                      QnA
-                    </button>
-                  </div>
-                  </form>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-12 grid-margin stretch-card">
-              <div class="card">
-                <div class="card-body">
-                  <h4 class="card-title">Recent Documents</h4>
+                  <h4 class="card-title">{PDF Name}</h4>
                   <p class="card-description">
                     <!-- Add class <code>.table-bordered</code> -->
                   </p>
-                  <div class="table-responsive pt-3">
-                    <table class="table table-bordered">
-                      <thead>
-                        <tr>
-                          <th>
-                            #
-                          </th>
-                          <th>
-                            Title
-                          </th>
-                          <!-- <th>
-                            Date
-                          </th> -->
-                          <th>
-                            Download Link
-                          </th>
-                          <th>
-                            Date
-                          </th>
-                        </tr>
-                      </thead>
+                  <!-- PDF -->
+                  <style>
+                    /* Only resize the element if PDF is embedded */
+                    .pdfobject-container {
+                      width: 100%;
+                      height: 700px;
+                    }
+                  </style>
 
-                      <tbody>
-                        <tr>
-                          <td>
-                            1
-                          </td>
-                          <td>
-                            <a href="/analyse">Biotech 101</a>
-                          </td>
-                          <td>
-                            <div class="progress">
-                              <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <!-- <td>
-                            $ 77.99
-                          </td> -->
-                          <td>
-                            May 15, 2015
-                          </td>
-                        </tr>
-                        
-                      </tbody>
-                    </table>
-                  </div>
+                  <div id="my-container"></div>
+
+                  <script>
+                    PDFObject.embed("../static/pdf/radix.pdf", "#my-container");
+                  </script>
+                  <!-- PDF -->
                 </div>
               </div>
             </div>
-            
+            <div class="col-lg-4 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">Options</h4>
+                  <p class="card-description">
+                    <!-- Add class <code>.table-bordered</code> -->
+                  </p>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
         <!-- content-wrapper ends -->
         <!-- partial:../static/partials/_footer.html -->
         <footer class="footer">
           <div class="d-sm-flex justify-content-center justify-content-sm-between">
-            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2020 <a href="https://www.analyticware.in/" target="_blank">AnalyticWare</a>. All rights reserved.</span>
+            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2020 <a
+                href="https://www.analyticware.in/" target="_blank">AnalyticWare</a>. All rights reserved.</span>
             <!-- <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Hand-crafted & made with <i class="mdi mdi-heart text-danger"></i></span> -->
           </div>
         </footer>
