--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
               <h6 class="font-weight-light">Sign in to continue.</h6>
               <div class="main">
         <div class="col-md-6 col-sm-12">
-        <form action="{{ url_for('selection') }}" method="post">
+        <form action="{{ url_for('login') }}" method="post">
             <div class="login-form">
                     <div class="form-group">
                         <label>User Name</label>
