--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -49,7 +49,7 @@
           <li class="nav-item nav-profile dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
               <img src="../static/images/faces/face5.jpg" alt="profile"/>
-              <span class="nav-profile-name">Thapar</span>
+              <span class="nav-profile-name">{{username}}</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
               <a class="dropdown-item">
@@ -99,7 +99,7 @@
           </li>
           
           <li class="nav-item">
-          <form action="{{ url_for('login') }}" method="post">
+          <form action="{{ url_for('logout') }}">
             <a class="nav-link" href="/">
               <i class="mdi mdi-file-document-box-outline menu-icon"></i>
               <span class="menu-title">Logout</span>
