--- a/templates/searchengine.html
+++ b/templates/searchengine.html
@@ -143,66 +143,15 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-12 grid-margin stretch-card">
-              <div class="card">
-                <div class="card-body">
-                  <h4 class="card-title">Results table</h4>
-                  <p class="card-description">
-                    <!-- Add class <code>.table-bordered</code> -->
-                  </p>
-                  <div class="table-responsive pt-3">
-                    <table class="table table-bordered">
-                      <thead>
-                        <tr>
-                          <th>
-                            #
-                          </th>
-                          <th>
-                            Title
-                          </th>
-                          <!-- <th>
-                            Date
-                          </th> -->
-                          <th>
-                            Download Link
-                          </th>
-                          <th>
-                            Date
-                          </th>
-                        </tr>
-                      </thead>
+            <div class="card">
+                    <h3> List of documents found : </h3> <br><br>
 
-                      <tbody>
-                        <tr>
-                          <td>
-                            1
-                          </td>
-                          <td>
-                            Herman Beck
-                          </td>
-                          <td>
-                            <div class="progress">
-                              <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <!-- <td>
-                            $ 77.99
-                          </td> -->
-                          <td>
-                            May 15, 2015
-                          </td>
-                        </tr>
-                        
-                      </tbody>
-                    </table>
-                  </div>
+                    {% for table in tables %}
+                    {{ table|safe }}
+                    {% endfor %}
                 </div>
-              </div>
             </div>
-            
-          </div>
         </div>
-        
         <!-- content-wrapper ends -->
         <!-- partial:../static/partials/_footer.html -->
         <footer class="footer">
