--- a/templates/upload.html
+++ b/templates/upload.html
@@ -163,7 +163,7 @@
                             1
                           </td>
                           <td>
-                            <a href="/analyse">Biotech 101</a>
+                            <a href="{{filename}}">Biotech 101</a>
                           </td>
                           <td>
                             <div class="progress">
