--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -49,17 +49,17 @@
           <li class="nav-item nav-profile dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
               <img src="../static/images/faces/face5.jpg" alt="profile"/>
-              <span class="nav-profile-name">{{username}}</span>
+              <span class="nav-profile-name">{{ username }}</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-              <a class="dropdown-item">
+              <!-- <a class="dropdown-item">
               
                 <i class="mdi mdi-settings text-primary"></i>
                 Profile
-              </a>
+              </a> -->
               <a class="dropdown-item">
                 <i class="mdi mdi-logout text-primary"></i>
-                <form action="{{ url_for('login') }}" method="post">
+                <form action="{{ url_for('logout') }}" method="post">
                 Logout
                 </form>
               </a>
