--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Login</title>
+  <title>Register</title>
   <!-- plugins:css -->
   <link rel="stylesheet" href="../static/vendors/mdi/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="../static/vendors/base/vendor.bundle.base.css">
@@ -29,35 +29,27 @@
               <div class="brand-logo">
                 <img src="../static/images/logo.svg" alt="logo">
               </div>
-              <h4>Hello! let's get started</h4>
-              <h6 class="font-weight-light">Sign in to continue.</h6>
-              <div class="main">
-                <div class="col-md-6 col-sm-12">
-                  
-                  <form class="form-signin pt-3" method="POST" action="/login">
-                    <!-- <h2 class="form-signin-heading">Please sign in</h2> -->
-                    {{ form.hidden_tag() }}
-                    {{ wtf.form_field(form.username) }}
-                    {{ wtf.form_field(form.password) }}
-                    {{ wtf.form_field(form.remember) }}
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-                  </form>
-                  <div class="text-center mt-4 font-weight-light">
-                    New User ? <a href="/signup" class="text-primary"> Register</a>
-                  </div>
-                  <br>
-                  <br>
-                  {{ warning }}
-                </div>
+              <h4>New here?</h4>
+              <h6 class="font-weight-light">Signing up is easy. It only takes a few steps</h6>
+              
+              <form class="form-signin" method="POST" action="/signup">
+                <!-- <h2 class="form-signin-heading">Sign Up</h2> -->
+                {{ form.hidden_tag() }}
+                {{ wtf.form_field(form.username) }}
+                {{ wtf.form_field(form.email) }}
+                {{ wtf.form_field(form.password) }}
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
+              </form>
+              <div class="text-center mt-4 font-weight-light">
+                Already have an account? <a href="/login" class="text-primary">Login</a>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <!-- content-wrapper ends -->
     </div>
-    <!-- content-wrapper ends -->
-  </div>
-  <!-- page-body-wrapper ends -->
+    <!-- page-body-wrapper ends -->
   </div>
   <!-- container-scroller -->
   <!-- plugins:js -->
