--- a/templates/qna.html
+++ b/templates/qna.html
@@ -53,7 +53,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
              
-              <a class="dropdown-item">
+              <a class="dropdown-item" href="/logout">
                 <i class="mdi mdi-logout text-primary"></i>
                 Logout
               </a>
@@ -82,26 +82,30 @@
               <span class="menu-title">Search Engine</span>
             </a>
           </li>
+          
           <li class="nav-item">
-            <a class="nav-link" href="/wordcloud">
+            <a class="nav-link" href="{{ url_for('wordcloud', pdf_id=pdf.id) }}">
               <i class="mdi mdi-chart-pie menu-icon"></i>
               <span class="menu-title">Wordcloud</span>
             </a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link" href="summarization">
+            <a class="nav-link" href="{{ url_for('summarization', pdf_id=pdf.id) }}">
               <i class="mdi mdi-grid-large menu-icon"></i>
               <span class="menu-title">Summarization</span>
             </a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link" href="qna">
+            <a class="nav-link" href="{{ url_for('qna', pdf_id=pdf.id) }}">
               <i class="mdi mdi-emoticon menu-icon"></i>
               <span class="menu-title">QnA</span>
             </a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link" href="/">
+            <a class="nav-link" href="/logout">
               <i class="mdi mdi-file-document-box-outline menu-icon"></i>
               <span class="menu-title">Logout</span>
             </a>
