--- a/templates/searchengine.html
+++ b/templates/searchengine.html
@@ -51,14 +51,11 @@
           <li class="nav-item nav-profile dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
               <img src="../static/images/faces/face5.jpg" alt="profile" />
-              <span class="nav-profile-name">Thapar</span>
+              <span class="nav-profile-name">{{ current_user.username }}</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-              <a class="dropdown-item">
-                <i class="mdi mdi-settings text-primary"></i>
-                Settings
-              </a>
-              <a class="dropdown-item">
+              
+              <a class="dropdown-item" href="/logout">
                 <i class="mdi mdi-logout text-primary"></i>
                 Logout
               </a>
