--- a/templates/upload.html
+++ b/templates/upload.html
@@ -23,13 +23,14 @@
     <!-- partial:../static/partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="navbar-brand-wrapper d-flex justify-content-center">
-        <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">  
-          <a class="navbar-brand brand-logo" href="index.html"><img src="../static/images/logo.svg" alt="logo"/></a>
-          <a class="navbar-brand brand-logo-mini" href="index.html"><img src="../static/images/logo-mini.svg" alt="logo"/></a>
+        <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">
+          <a class="navbar-brand brand-logo" href="index.html"><img src="../static/images/logo.svg" alt="logo" /></a>
+          <a class="navbar-brand brand-logo-mini" href="index.html"><img src="../static/images/logo-mini.svg"
+              alt="logo" /></a>
           <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
             <span class="mdi mdi-sort-variant"></span>
           </button>
-        </div>  
+        </div>
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
         <ul class="navbar-nav mr-lg-4 w-100">
@@ -40,30 +41,29 @@
                   <i class="mdi mdi-magnify"></i>
                 </span>
               </div>
-              <input type="text" class="form-control" placeholder="Search now" aria-label="search" aria-describedby="search">
+              <input type="text" class="form-control" placeholder="Search now" aria-label="search"
+                aria-describedby="search">
             </div>
           </li>
         </ul>
         <ul class="navbar-nav navbar-nav-right">
-          
+
           <li class="nav-item nav-profile dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
-              <img src="../static/images/faces/face5.jpg" alt="profile"/>
-              <span class="nav-profile-name">Thapar</span>
+              <img src="../static/images/faces/face5.jpg" alt="profile" />
+              <span class="nav-profile-name">{{current_user.username}}</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-              <a class="dropdown-item">
-                <i class="mdi mdi-settings text-primary"></i>
-                Settings
-              </a>
-              <a class="dropdown-item">
+              
+              <a class="dropdown-item" href="/logout">
                 <i class="mdi mdi-logout text-primary"></i>
                 Logout
               </a>
             </div>
           </li>
         </ul>
-        <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
+        <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button"
+          data-toggle="offcanvas">
           <span class="mdi mdi-menu"></span>
         </button>
       </div>
@@ -79,14 +79,14 @@
               <span class="menu-title">Dashboard</span>
             </a>
           </li>
-         
+
           <li class="nav-item">
             <a class="nav-link" href="/searchengine">
               <i class="mdi mdi-view-headline menu-icon"></i>
               <span class="menu-title">Search Engine</span>
             </a>
           </li>
-          
+
           <li class="nav-item">
             <a class="nav-link" href="/">
               <i class="mdi mdi-file-document-box-outline menu-icon"></i>
@@ -96,10 +96,10 @@
         </ul>
       </nav>
       <!-- partial -->
-      <div class="main-panel">        
+      <div class="main-panel">
         <div class="content-wrapper">
           <div class="row">
-            
+
             <div class="col-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
@@ -107,36 +107,42 @@
                   <p class="card-description">
                     <!-- Use the <code>.form-inline</code> class to display a series of labels, form controls, and buttons on a single horizontal row -->
                   </p>
-                  <form class="form-inline"form action="{{ url_for('uploader') }}" method="post" enctype="multipart/form-data">
+                  <form class="form-inline" form action="{{ url_for('uploader') }}" method="post"
+                    enctype="multipart/form-data">
 
                     <div class="form-group">
-                        <label>File upload</label>
-                        <input type="file" type="file" name= "file"  class="file-upload-default">
-                        <div style="margin-right: 10px;"></div>
-                        <div class="input-group col-xs-12">
-                          <input type="text" type="file" name= "file" class="form-control file-upload-info" disabled placeholder="Browse PDF">
-                          <span class="input-group-append">
-                            <button class="file-upload-browse btn btn-primary" type="button">Browse</button>
-                          </span>
-                          <button  type="submit" class="btn btn-success btn-icon-text" style="margin-left:10px;">                                                 
-                            Upload
-                          </button>
-                        </div>
+                      <label>File upload</label>
+                      <input type="file" type="file" name="file" class="file-upload-default">
+                      <div style="margin-right: 10px;"></div>
+                      <div class="input-group col-xs-12">
+                        <input type="text" type="file" name="file" class="form-control file-upload-info" disabled
+                          placeholder="Browse PDF">
+                        <span class="input-group-append">
+                          <button class="file-upload-browse btn btn-primary" type="button">Browse</button>
+                        </span>
+                        <button type="submit" class="btn btn-success btn-icon-text" style="margin-left:10px;">
+                          Upload
+                        </button>
+                      </div>
                     </div>
 
                   </form>
                 </div>
               </div>
             </div>
+          </div>
+
+          <div class="row">
             <div class="col-lg-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title">Recent Documents</h4>
                   <p class="card-description">
-                    <!-- Add class <code>.table-bordered</code> -->
                   </p>
                   <div class="table-responsive pt-3">
+
                     <table class="table table-bordered">
+
                       <thead>
                         <tr>
                           <th>
@@ -145,53 +151,46 @@
                           <th>
                             Title
                           </th>
-                          <!-- <th>
-                            Date
-                          </th> -->
-                          <th>
-                            Download Link
-                          </th>
                           <th>
                             Date
                           </th>
                         </tr>
                       </thead>
 
+                      {% for pdf in pdfs %}
                       <tbody>
                         <tr>
                           <td>
-                            1
+                            {{ pdf.id }}
                           </td>
                           <td>
-                            <a href="{{filename}}">Biotech 101</a>
+                            <a href="{{ url_for('analyse', pdf_id=pdf.id) }}">
+                              {{ pdf.filename }}
+                            </a>
                           </td>
                           <td>
-                            <div class="progress">
-                              <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <!-- <td>
-                            $ 77.99
-                          </td> -->
-                          <td>
-                            May 15, 2015
+                            {{ pdf.date_uploaded.strftime('%B %d, %Y') }}
                           </td>
                         </tr>
-                        
                       </tbody>
+                      {% endfor %}
+
                     </table>
+
                   </div>
                 </div>
               </div>
             </div>
-            
           </div>
+
+          <!-- </div> -->
         </div>
         <!-- content-wrapper ends -->
         <!-- partial:../static/partials/_footer.html -->
         <footer class="footer">
           <div class="d-sm-flex justify-content-center justify-content-sm-between">
-            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2020 <a href="https://www.analyticware.in/" target="_blank">AnalyticWare</a>. All rights reserved.</span>
+            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2020 <a
+                href="https://www.analyticware.in/" target="_blank">AnalyticWare</a>. All rights reserved.</span>
             <!-- <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Hand-crafted & made with <i class="mdi mdi-heart text-danger"></i></span> -->
           </div>
         </footer>
