--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -47,14 +47,11 @@
           <li class="nav-item nav-profile dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
               <img src="../static/images/faces/face5.jpg" alt="profile"/>
-              <span class="nav-profile-name">Thapar</span>
+              <span class="nav-profile-name">{{ current_user.username }}</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-              <a class="dropdown-item">
-                <i class="mdi mdi-settings text-primary"></i>
-                Settings
-              </a>
-              <a class="dropdown-item">
+              
+              <a class="dropdown-item" href="/logout">
                 <i class="mdi mdi-logout text-primary"></i>
                 Logout
               </a>
@@ -85,25 +82,28 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/wordcloud">
+            <a class="nav-link" href="{{ url_for('wordcloud', pdf_id=pdf.id) }}">
               <i class="mdi mdi-chart-pie menu-icon"></i>
               <span class="menu-title">Wordcloud</span>
             </a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link" href="summarization">
+            <a class="nav-link" href="{{ url_for('summarization', pdf_id=pdf.id) }}">
               <i class="mdi mdi-grid-large menu-icon"></i>
               <span class="menu-title">Summarization</span>
             </a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link" href="qna">
+            <a class="nav-link" href="{{ url_for('qna', pdf_id=pdf.id) }}">
               <i class="mdi mdi-emoticon menu-icon"></i>
               <span class="menu-title">QnA</span>
             </a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link" href="/">
+            <a class="nav-link" href="/logout">
               <i class="mdi mdi-file-document-box-outline menu-icon"></i>
               <span class="menu-title">Logout</span>
             </a>
