--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -154,7 +154,23 @@
                 </div>
                 <br>
                 <div class="card">
-                <img src={{ url }} alt="Chart" height="500" width="550">
+                <img src={{ url1 }} alt="Chart" height="500" width="550">
+                </div>    
+                <!-- <br><br> -->
+
+            </div>
+        </div>
+            <div class="main">
+            <div class="container-fluid">
+
+                <!-- <br><br> -->
+                <!-- cloud! -->
+                <div class="head-text">
+                    <h2> bar graph</h2>
+                </div>
+                <br>
+                <div class="card">
+                <img src={{ url2 }} alt="Chart" height="500" width="550">
                 </div>    
                 <!-- <br><br> -->
 
